// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEOONEDataProvider call 1`] = `
Object {
  "gasConsumed": "0",
  "message": "10",
  "stack": Array [
    Object {
      "type": "Integer",
      "value": "1",
    },
    Object {
      "type": "Array",
      "value": Array [
        Object {
          "type": "Void",
        },
      ],
    },
  ],
  "state": "FAULT",
}
`;

exports[`NEOONEDataProvider iterBlocks - null iterBlocksFetchTimeoutMS 1`] = `
FromAsyncIterable {
  "_selector": [Function],
  "_source": AsyncBlockIterator {
    "__done": false,
    "_batchSize": 10,
    "_client": NEOONEDataProvider {
      "_client": JSONRPCClient {
        "_provider": JSONRPCHTTPProvider {
          "batcher": DataLoader {
            "_batchLoadFn": [Function],
            "_options": Object {
              "cacheKeyFn": [Function],
              "maxBatchSize": 25,
            },
            "_promiseCache": Array [],
            "_queue": Array [],
          },
          "endpoint": "bar",
        },
      },
      "_iterBlocksBatchSize": undefined,
      "_iterBlocksFetchTimeoutMS": undefined,
      "network": "foo",
    },
    "_currentIndex": 1,
    "_fetchTimeoutMS": 20000,
    "_fetching": false,
    "_indexStop": 2,
    "_items": Array [],
    "_monitor": undefined,
    "_resolvers": Array [],
    "_startHeight": null,
  },
}
`;

exports[`NEOONEDataProvider iterBlocks 1`] = `
FromAsyncIterable {
  "_selector": [Function],
  "_source": AsyncBlockIterator {
    "__done": false,
    "_batchSize": 10,
    "_client": NEOONEDataProvider {
      "_client": JSONRPCClient {
        "_provider": JSONRPCHTTPProvider {
          "batcher": DataLoader {
            "_batchLoadFn": [Function],
            "_options": Object {
              "cacheKeyFn": [Function],
              "maxBatchSize": 25,
            },
            "_promiseCache": Array [],
            "_queue": Array [],
          },
          "endpoint": "bar",
        },
      },
      "_iterBlocksBatchSize": undefined,
      "_iterBlocksFetchTimeoutMS": 1000,
      "network": "foo",
    },
    "_currentIndex": 0,
    "_fetchTimeoutMS": 1000,
    "_fetching": false,
    "_indexStop": undefined,
    "_items": Array [],
    "_monitor": undefined,
    "_resolvers": Array [],
    "_startHeight": null,
  },
}
`;

exports[`NEOONEDataProvider setRPCURL 1`] = `
NEOONEDataProvider {
  "_client": JSONRPCClient {
    "_provider": JSONRPCHTTPProvider {
      "batcher": DataLoader {
        "_batchLoadFn": [Function],
        "_options": Object {
          "cacheKeyFn": [Function],
          "maxBatchSize": 25,
        },
        "_promiseCache": Array [],
        "_queue": Array [],
      },
      "endpoint": "buzz",
    },
  },
  "_iterBlocksBatchSize": undefined,
  "_iterBlocksFetchTimeoutMS": 1000,
  "network": "foo",
}
`;
